--- a/React/props-model.html
+++ b/React/props-model.html
@@ -9,7 +9,7 @@
     <!-- Data-... is a valid HTML attribute that can be referenced from the elements dataset property -->
     <div data-firstname="Robert" data-lastname="Smith"></div>
 
-    <!-- Vanilla JavaScript, no React     -->
+    <!-- Vanilla JavaScript, NO REACT     -->
     <script>
         // Grab div element with querySelector 
         const div = document.querySelector('div');
@@ -57,7 +57,7 @@
         // EXAMPLE --------------------------------------------------
 
         // const handleExample = (event) => {
-        //     console.log(event.target) // could be event 'dot' lots n' lots of stuff
+        //     console.log(event.target) // could be event 'dot' many things.
         // }
 
         // ----------------------------------------------------------
